--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,50 @@
+# Node modules
 node_modules/
+
+# Build outputs
 dist/
+build/
+
+# Vite cache
+.vite/
+
+# Local env files
 .env
+.env.*
+
+# Editor directories and files
 .vscode/
 .idea/
+
+# macOS
 .DS_Store
+
+# Windows
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+
+# Test coverage
+coverage/
+coverage-*.json
+*.lcov
+
+# TypeScript
+*.tsbuildinfo
+
+# Vitest cache
+vitest.cache/
+
+# Sonar
+.scannerwork/
+.sonar/
+
+# Misc caches
+.cache/
+out/
+
