--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,14 @@
-sonar.projectKey=ags-fitness-ui
-sonar.projectName=AGS Fitness UI
-sonar.projectVersion=0.1.0
-sonar.sourceEncoding=UTF-8
-sonar.sources=src
-sonar.tests=src
-sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
-sonar.exclusions=**/node_modules/**,**/*.d.ts,dist/**
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.javascript.exclusions=**/node_modules/**,**/dist/**
-sonar.typescript.exclusions=**/node_modules/**,**/dist/**
-sonar.coverage.exclusions=src/main.tsx,src/index.css
+sonar.projectKey=atulstpt_ags-fitness-ui
+sonar.organization=ags-cloud-technologies
+
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=ags-fitness-ui
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
