Disable SonarQube scan conditionally based on the presence of SONAR_TOKEN

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
         run: npm run build
 
       - name: SonarQube Scan
-        if: ${{ secrets.SONAR_TOKEN }}
+        # if: ${{ secrets.SONAR_TOKEN }}
         uses: SonarSource/sonarqube-scan-action@v6
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
