Replace SonarQube scan steps with SonarCloud scan and update conditions for token usage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,20 +53,12 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: SonarQube Scan (host)
-        if: ${{ secrets.SONAR_TOKEN && secrets.SONAR_HOST_URL }}
-        uses: SonarSource/sonarqube-scan-action@v6
+      - name: SonarCloud Scan
+        if: ${{ env.SONAR_TOKEN != '' }}
+        uses: SonarSource/sonarcloud-github-action@v2
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-
-      - name: SonarQube Scan (organization)
-        if: ${{ secrets.SONAR_TOKEN && secrets.SONAR_ORGANIZATION }}
-        uses: SonarSource/sonarqube-scan-action@v6
-        with:
-          organization: ${{ secrets.SONAR_ORGANIZATION }}
-          projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
-          token: ${{ secrets.SONAR_TOKEN }}
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
